--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>外航站培训管理系统</h1>
-    <a href="http://120.55.49.2">培训考试系统</a>
-    
+    <a href="http://120.55.49.2">进入培训考试系统</a>
+    <p>微信中打开会被微信转码无法打开，请在浏览器中打开 <a href="http://sdapx.com">sdapx.com</a></p>
     <h3>通知</h3>
     
     <p>新员工进入系统后及时注册账号，并确定自己可以进入系统</p>
