--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>山东航空工程技术公司培训部</title>
-    <link rel="stylesheet" href="./node_modules/weui/dist/style/weui.min.css"/>
+    <link rel="stylesheet" href="./weui.min.css"/>
 </head>
 <body>
     <h1>外航站培训管理系统</h1>
