--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
     <h1>外航站培训管理系统</h1>
     <div class="weui-cells">
-            
-                <a class="weui-cell weui-cell_access" href="http://120.55.49.2">
-                    <div class="weui-cell__hd"><img src="..." alt="" style="width:20px;margin-right:5px;display:block"></div>
+        <a class="weui-cell weui-cell_access" href="http://120.55.49.2">
+                    <div class="weui-cell__hd"></div>
                     <div class="weui-cell__bd">
                         <p>培训考试系统</p>
                     </div>
                     <div class="weui-cell__ft">进入<span class="weui-badge weui-badge_dot"></span></div>
-                </a>
+        </a>
     </div>
     <div class="weui-cells__tips">微信中打开会被微信转码无法打开，请在浏览器中打开</div>
     <article class="weui-article">
@@ -25,7 +24,7 @@
         <section>
             <h2 class="title">新员工参加测试一</h2>
             <section>
-                <h3>注意事项：</h3>
+                <div class="weui-cells__title">注意事项：</div>
                 <ul>
                     <li>账号需要自行注册，通过邮箱来验证，用户名建议为员工号，便于管理</li>
                     <li>注册时，机场选择“山航新员工培训”，公司选择“山东航空工程技术公司”</li>
@@ -36,9 +35,6 @@
             </section>
             <section>
                 <h3>2017.12.01</h3>
-                <p>
-                    有问题请联系管理员
-                </p>
             </section>
         </section>
     </article>
