--- a/index.html
+++ b/index.html
@@ -8,33 +8,43 @@
     <link rel="stylesheet" href="./weui.min.css"/>
 </head>
 <body>
-    <h1>外航站培训管理系统</h1>
+    <div class="page__hd">
+        <h1 class="page__title">外航站培训管理系统</h1>
+        <p class="page__desc">山东航空工程技术公司培训部</p>
+    </div>
+    <div class="weui-cells__title">进入系统</div>
     <div class="weui-cells">
         <a class="weui-cell weui-cell_access" href="http://120.55.49.2">
-                    <div class="weui-cell__hd"></div>
-                    <div class="weui-cell__bd">
-                        <p>培训考试系统</p>
-                    </div>
-                    <div class="weui-cell__ft">进入<span class="weui-badge weui-badge_dot"></span></div>
+            <div class="weui-cell__hd"><img src="icon_nav_cell.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+            <div class="weui-cell__bd">
+                <p>培训考试系统</p>
+            </div>
+            <div class="weui-cell__ft">进入<span class="weui-badge weui-badge_dot"></span></div>
         </a>
     </div>
+
     <div class="weui-cells__tips">微信中打开会被微信转码无法打开，请在浏览器中打开</div>
     <article class="weui-article">
-        <h1>通知</h1>
         <section>
-            <h2 class="title">新员工参加测试一</h2>
+            <h2 class="title">网站通知</h2>
             <section>
-                <div class="weui-cells__title">注意事项：</div>
-                <ul>
-                    <li>账号需要自行注册，通过邮箱来验证，用户名建议为员工号，便于管理</li>
-                    <li>注册时，机场选择“山航新员工培训”，公司选择“山东航空工程技术公司”</li>
-                    <li>验证邮箱信息后，即可使用账号登陆，如果邮箱无法收到邮件，可能被拦截，自行查找</li>
-                    <li>登陆后，进入“首页”，然后选择“山东航空新员工测试一”课程，输入选课密码：123123</li>
-                    <li>选课后，及时进行考试，可以多次参加，取最高分</li>
-                </ul>
-            </section>
-            <section>
-                <h3>2017.12.01</h3>
+                    <div class="weui-cells__title">新员工参加测试一</div>
+                    <div class="weui-cells">
+                        <a class="weui-cell weui-cell_access" href="dialog1.html">
+                            <div class="weui-cell__hd"><img src="dialog.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+                            <div class="weui-cell__bd">
+                                <p>注册账号</p>
+                            </div>
+                            <div class="weui-cell__ft">查看<span class="weui-badge weui-badge_dot"></span></div>
+                        </a>
+                        <a class="weui-cell weui-cell_access" href="dialog2.html">
+                            <div class="weui-cell__hd"><img src="dialog.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+                            <div class="weui-cell__bd">
+                                <p>学习第一课</p>
+                            </div>
+                            <div class="weui-cell__ft">查看<span class="weui-badge weui-badge_dot"></span></div>
+                        </a>
+                    </div>
             </section>
         </section>
     </article>
