--- a/dialog2.html
+++ b/dialog2.html
@@ -10,7 +10,7 @@
 <body>
         <div class="page__hd">
                 <h1 class="page__title">外航站培训管理系统</h1>
-                <p class="page__desc">山东航空工程技术公司培训部</p>
+                <p class="page__desc">山东航空工程技术公司培训中心</p>
             </div>
 
     <article class="weui-article">
@@ -18,8 +18,8 @@
             <h2 class="title">注意事项：</h2>
             <section>
                     <p>1.登陆系统后，点击左侧侧栏中的首页，可以看到所有课程列表</p>
-                    <p>2.进入“山东航空新员工测试一”，输入选课码：123123，选课</p>
-                    <p>3.选课后，就可以进行学习，进行考试</p>
+                    <p>2.根据各自班级选择课程，输入选课码：123456，选课</p>
+                    <p>3.选课后，就可以进行学习，进行考试，共有三分试卷，任选其中一个进行考试</p>
                     <p>4.测试可以进行多次尝试，最终选取最高分</p>
             </section>
             <section>
