--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page__hd">
         <h1 class="page__title">外航站培训管理系统</h1>
-        <p class="page__desc">山东航空工程技术公司培训部</p>
+        <p class="page__desc">山东航空工程技术公司培训中心</p>
     </div>
     <div class="weui-cells__title">进入系统</div>
     <div class="weui-cells">
