--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
     </div>
 
-    <div class="weui-cells__tips">微信中打开会被微信转码无法打开，请在浏览器中打开</div>
+    <div class="weui-cells__tips">微信中打开会被微信转码无法打开，请在浏览器中打开。如果无法点击，也可以直接输入地址：120.55.49.2</div>
     <article class="weui-article">
         <section>
             <h2 class="title">网站通知</h2>
