--- a/dialog2.html
+++ b/dialog2.html
@@ -17,10 +17,11 @@
         <section>
             <h2 class="title">注意事项：</h2>
             <section>
-                    <p>1.登陆系统后，点击左侧侧栏中的首页，可以看到所有课程列表</p>
-                    <p>2.根据各自班级选择课程，输入选课码：123456，选课</p>
-                    <p>3.选课后，就可以进行学习，进行考试，共有三分试卷，任选其中一个进行考试</p>
-                    <p>4.测试可以进行多次尝试，最终选取最高分</p>
+                    <p>1.登陆系统后，点击左侧侧栏，可以看到你的所有需要学习的课程</p>
+                    <p>2.系统会根据您的机场来给您分配课程</p>
+                    <p>3.如果没有课程，请检查您的个人资料，机场信息是否设置正确。改正后，重新登陆系统</p>
+                    <p>4.进入课程后，根据提示选择你要参加的考试进行考试</p>
+                    <p>5.考试可以进行多次尝试，系统会最终选取最高分</p>
             </section>
             <section>
                 <h3>2017.12.01</h3>
