--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section>
             <h2 class="title">网站通知</h2>
             <section>
-                    <div class="weui-cells__title">新员工参加测试一</div>
+                    <div class="weui-cells__title">系统注册说明</div>
                     <div class="weui-cells">
                         <a class="weui-cell weui-cell_access" href="dialog1.html">
                             <div class="weui-cell__hd"><img src="dialog.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
@@ -40,7 +40,7 @@
                         <a class="weui-cell weui-cell_access" href="dialog2.html">
                             <div class="weui-cell__hd"><img src="dialog.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
                             <div class="weui-cell__bd">
-                                <p>学习第一课</p>
+                                <p>学习课程</p>
                             </div>
                             <div class="weui-cell__ft">查看<span class="weui-badge weui-badge_dot"></span></div>
                         </a>
