--- a/dialog1.html
+++ b/dialog1.html
@@ -17,7 +17,7 @@
             <h2 class="title">注意事项：</h2>
             <section>
                     <p>1.账号需要自行注册，通过邮箱来验证，用户名建议为员工号，便于管理</p>
-                    <p>2.注册时，机场选择“山航新员工培训”，公司选择“山东航空工程技术公司”</p>
+                    <p>2.注册时，<b>请正确选择机场和公司信息</b>，十分重要，否则会无法进行考试</p>
                     <p>3.验证邮箱信息后，即可使用账号登陆，如果邮箱无法收到邮件，可能被拦截，自行查找</p>
                     <p>4.如果账户注册过程中有问题，请联系管理员</p>
             </section>
