--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </article>
    
     <div class="weui-footer">
-        <p class="weui-footer__text">Copyright &copy; 2017 山航机务培训中心</p>
+        <p class="weui-footer__text">Copyright &copy; 2017 山航机务培训中心 <a href="https://www.gitbook.com/read/book/wangzhengya/sda">管理员手册</a></p>
     </div>
 
 </body>
