--- a/dialog1.html
+++ b/dialog1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>山东航空工程技术公司培训部</title>
+    <title>山东航空工程技术公司培训中心</title>
     <link rel="stylesheet" href="./weui.min.css"/>
 </head>
 <body>
@@ -14,12 +14,13 @@
             </div>
     <article class="weui-article">
         <section>
-            <h2 class="title">注意事项：</h2>
+            <h2 class="title">账号注册：</h2>
             <section>
-                    <p>1.账号需要自行注册，通过邮箱来验证，用户名建议为员工号，便于管理</p>
+                    <p>1.账号需要自行注册，通过邮箱来验证，用户名请记住，登陆时用</p>
                     <p>2.注册时，<b>请正确选择机场和公司信息</b>，十分重要，否则会无法进行考试</p>
-                    <p>3.验证邮箱信息后，即可使用账号登陆，如果邮箱无法收到邮件，可能被拦截，自行查找</p>
-                    <p>4.如果账户注册过程中有问题，请联系管理员</p>
+                    <p>3.提交后，系统会向您的邮箱发送邮件，点击邮件里的连接。或者复制链接打开</p>
+                    <p>4.验证邮箱信息后，即可使用账号登陆，如果邮箱无法收到邮件，可能被拦截到垃圾邮件，自行查找</p>
+                    <p>5.如果账户注册过程中有问题，请联系航站负责人</p>
             </section>
             <section>
                 <h3>2017.12.01</h3>
