--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>山东航空工程技术公司培训部</title>
+    <title>山东航空工程技术公司培训中心</title>
     <link rel="stylesheet" href="./weui.min.css"/>
 </head>
 <body>
@@ -26,7 +26,7 @@
     <div class="weui-cells__tips">微信中打开会被微信转码无法打开，请在浏览器中打开。如果无法点击，也可以直接输入地址：120.55.49.2</div>
     <article class="weui-article">
         <section>
-            <h2 class="title">网站通知</h2>
+            <h2 class="title">用户须知</h2>
             <section>
                     <div class="weui-cells__title">系统注册说明</div>
                     <div class="weui-cells">
