--- a/dialog2.html
+++ b/dialog2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>山东航空工程技术公司培训部</title>
+    <title>山东航空工程技术公司培训中心</title>
     <link rel="stylesheet" href="./weui.min.css"/>
 </head>
 <body>
@@ -18,7 +18,7 @@
             <h2 class="title">注意事项：</h2>
             <section>
                     <p>1.登陆系统后，点击左侧侧栏，可以看到你的所有需要学习的课程</p>
-                    <p>2.系统会根据您的机场来给您分配课程</p>
+                    <p>2.系统会根据您的机场选择来给您分配课程</p>
                     <p>3.如果没有课程，请检查您的个人资料，机场信息是否设置正确。改正后，重新登陆系统</p>
                     <p>4.进入课程后，根据提示选择你要参加的考试进行考试</p>
                     <p>5.考试可以进行多次尝试，系统会最终选取最高分</p>
