--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="page__title">外航站培训管理系统</h1>
         <p class="page__desc">山东航空工程技术公司培训中心</p>
     </div>
-    <div class="weui-cells__title">进入系统</div>
+    <div class="weui-cells__title">进入系统,如果您在微信中打开，请点击右上角，然后在浏览器中打开</div>
     <div class="weui-cells">
         <a class="weui-cell weui-cell_access" href="http://120.55.49.2">
             <div class="weui-cell__hd"><img src="icon_nav_cell.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
