--- a/dialog1.html
+++ b/dialog1.html
@@ -21,6 +21,7 @@
                     <p>3.提交后，系统会向您的邮箱发送邮件，点击邮件里的连接。或者复制链接打开</p>
                     <p>4.验证邮箱信息后，即可使用账号登陆，如果邮箱无法收到邮件，可能被拦截到垃圾邮件，自行查找</p>
                     <p>5.如果账户注册过程中有问题，请联系航站负责人</p>
+                <a href=“http://120.55.49.2/login/signup.php”>点击这里注册</a>
             </section>
             <section>
                 <h3>2017.12.01</h3>
