--- a/dialog1.html
+++ b/dialog1.html
@@ -22,6 +22,15 @@
                     <p>4.验证邮箱信息后，即可使用账号登陆，如果邮箱无法收到邮件，可能被拦截到垃圾邮件，自行查找</p>
                     <p>5.如果账户注册过程中有问题，请联系航站负责人</p>
                 <a href=“http://120.55.49.2/login/signup.php”>点击这里注册</a>
+                <div class="weui-cells">
+                     <a class="weui-cell weui-cell_access" href="http://120.55.49.2/login/signup.php">
+                    <div class="weui-cell__hd"><img src="icon_nav_cell.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+                    <div class="weui-cell__bd">
+                        <p>注册账号</p>
+                    </div>
+                    <div class="weui-cell__ft">进入注册<span class="weui-badge weui-badge_dot"></span></div>
+                </a>
+            </div>
             </section>
             <section>
                 <h3>2017.12.01</h3>
